# musiclibgen

./: .gitignore  CMakeLists.txt  base.h  base64.h  constants.h  library.cc  library.h  library_utils.h  retriever.cc  retriever.h  structs.h  utils.h
examples/: main.c  main.cc
